# game_engine

./: .gitignore  CMakeLists.txt  INSTALL.md  README.md  cmake_build_alias.sh  cmake_windows_build_alias.sh  doxygen.conf  install_dependencies.sh  main.cpp  profiler.sh
cmake/: gameEngineConfig.cmake  game_engineConfig.cmake  install_script.cmake  linux_toolchain.cmake  windows_toolchain.cmake
docs/: External resources.md  Introduction.md  Requirements.md  Tools.md
docs/.obsidian/: workspace.json
exec_env/: main
include/: clock.cpp  clock.h  clock_windows.cpp  static_pool.hpp  tmp_extensions.hpp  vects.hpp
include/game_engine/: base_object.hpp  button.hpp  colors.h  dispatcher.hpp  engine.hpp  events.hpp  graphic_system.hpp  obj_manager.hpp  objects.hpp  physics.hpp  std_includes.hpp  tmp_extensions.hpp  vects.hpp
src/: CMakeLists.txt  audio_system.hpp  base_object.cpp  compatability.hpp  dispatcher.cpp  dispatcher.hpp  engine.cpp  engine.hpp  events.cpp  events.hpp  graphic_system.cpp  graphic_system.hpp  main.cpp  obj_manager.cpp  objects.cpp  objects.hpp  physics.cpp  physics_object.hpp  std_includes.hpp
